# tftp-hpa

./: .gitignore  Makefile  config.h  configure.ac
autoconf/m4/: pa_check_inttypes_h_sane.m4  pa_have_tcpwrappers.m4  pa_search_libs_and_add.m4  pa_sigsetjmp.m4
common/: Makefile  signal.c  tftpsubs.c
lib/: Makefile
tftp/: Makefile  extern.h  main.c  tftp.c
tftpd/: Makefile  misc.c  recvfrom.c  remap.c  remap.h  tftpd.8.in  tftpd.c  tftpd.h
